[metadata]
license = MIT
license_file = LICENSE.txt

[bdist_rpm]
doc_files = LICENSE.txt

[build_sphinx]
source-dir = docs/source
build-dir = build/sphinx

[upload_sphinx]
upload-dir = build/sphinx/html

[aliases]
test=pytest

[wheel]
universal = 1

[pycodestyle]
max-line-length = 140
exclude = .git,__pycache__,.tox,docs,tests,build,dist
ignore = E701, E241

[flake8]
max-line-length = 140
exclude = .git,__pycache__,.tox,docs,tests,build,dist
ignore = E701, E241
