[metadata]
license = LGPL3
license_file = LICENSE.txt

[bdist_rpm]
doc_files = LICENSE.txt

[build_sphinx]
source-dir = docs/source
build-dir = build/sphinx

[upload_sphinx]
upload-dir = build/sphinx/html

[aliases]
test=pytest

[wheel]
universal = 0

[pycodestyle]
max-line-length = 140
exclude = .git,__pycache__,.tox,.eggs,docs,tests,build,dist
ignore = E701, E241, E252, E722

[flake8]
max-line-length = 140
exclude = .git,__pycache__,.tox,.eggs,docs,tests,build,dist
ignore = E701, E241
